--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,10 +21,11 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
+          pip install -r requirements.txt
           pip install pytest
 
       - name: Run PyTest
-        run: pytest
+        run: pytest test.py
 
   docker:
     runs-on: ubuntu-latest
